<resources>
    <string name="app_name">MyDemo</string>
    <string name="stickyHeadActivity">RecyclerView 粘性头布局</string>
    <string name="FlowViewActivity">FlowView 流布局</string>
    <string name="SwipeMenuView">侧滑删除</string>
    <string name="diy_progressbar">进度条</string>
    <string name="circle_view">圆形View</string>
    <string name="rx_study">RxJava_RxAndroid学习</string>
    <string name="okhttp">okhttp封装使用</string>
    <string name="carame_album">相机和相册调用(兼容到23)</string>
    <string name="carame_album2">相机和相册调用(兼容到23)</string>
    <string name="system_dialog">各种类型系统对话框学习</string>
    <string name="statusbar"><![CDATA[status bar状态栏 学习; 5.0以下 &#45;&#45; 5.0以上区别及实现方式]]></string>
    <string name="activity_transition">Activity 跳转动画</string>
    <string name="vertical_scroll_textView">垂直滚动TextView</string>
    <string name="retrofit">学习Retrofit</string>
    <string name="viewpager3d">3D ViewPager 画廊</string>
    <string name="circleView">布局 + 圆角图片</string>
    <string name="indexList">26字母检索View</string>
    <string name="countTime">倒计时</string>
    <string name="ADD">广告栏-- 当前文本动画化并为其中的新文本添加动画</string>
    <string name="material_design">android  material design 总结</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_navigation">导航</string>
    <string name="menu_home">首页</string>
    <string name="AndroidFourComponents">Android 四大组件</string>
        <string name="activiy_mani_fest_info0">Activity 介绍：是一个Android应用程序的重要组成部分.与使用main()方法启动应用程序的编程范例不同，Android系统Activity通过调用与其生命周期的特定阶段相对应的特定回调方法来启动实例中的代码</string>
        <string name="activiy_mani_fest_info1">Activity 配置清单配置清单：请打开您的清单文件ManiFest.xml 并添加一个  activity 元素作为 application  元素的子元素,此元素唯一必需的属性是 android：name，它指定活动的类名称。您还可以添加定义活动特征的属性，如标签，图标或UI主题</string>
        <string name="activiy_mani_fest_info2">Activity 声明意图(Intent, intent filter ) 过滤器 - 声明使用权限 - 管理活动生命周期</string>
        <string name="activityLife0">Activity 正常声明周期: onCreate --> onStart --> onResume --> onPause --> onStop --> onDestory </string>
        <string name="activityLife1">Activity 加载完成屏幕熄灭: onCreate --> onStart --> onResume --> onPause --> onStop --> onStart --> onResume --> onPause --> onStop --> onDestory  </string>
        <string name="activityLife2">Activity 进入另一个页面:  onCreate --> onStart --> onResume --> onPause --> onStop --> onStart --> onResume --> onPause --> onStop --> onDestory </string>
        <string name="activityLife3">Activity 点击了Home键:  onCreate --> onStart --> onResume --> onPause --> onStop --> onStart --> onResume --> onPause --> onStop --> onDestory </string>
        <string name="activityNoScreenChange">禁止横竖屏:很多软件在设计和开发中为了避免横竖屏切换时引发不必要麻烦,通常会禁止app横竖屏切换,需要在AndrodiManiFest.xml中设置 Activity 中的 android:screenOrientation 属性值来实现,也可以通过代码设置 setRequestOrientation()设置</string>
        <string name="activityScreenChangeFromUser">用户手动出发横竖屏: setRequestOrientation();来触发横竖屏切换,需要注意,手动调用屏幕切换,无视AndroidManiFest.xml里面的设置</string>
        <string name="activityScreenChangeLife">1.在res目录下简历 layout-land 和 layout-port目录, 相应的layout文件名不变,再不同横竖屏状态下加载不同布局,对数据处理
            2.横竖屏切换重启Activity生命周期: onCreate --> onStart --> onResume (发生旋转) --> onPause --> onStop --> onDestory --> onCreate --> onStart --> onResume (退出) --> onPause --> onStop --> onDestory</string>
        <string name="activityScreenChangeLife1">自动切换时候重启Activity时候数据保存:重写 Activity.onRetainCustomNonConfigurationInstance();用户切换横竖屏幕前保存数据保存时Object*(任何对象),在onCreate()中通过getLastCustomNonConfigurationInstance判断是否空来获取数据,注意一定要重新获取对象,</string>
        <string name="activityScreenChangeLife2">非重启Activity横竖屏切换:思想:通过 onConfigurationChange 拦截横竖屏切换,从而进行必要的切换布局和重新操做,android:configChanges="keyboardHidden|orientation|screenSize"或者android:configChanges="orientation|screenSize",然后在
        Activity或View中的onConfigurationChange(Configuration newConfig) 函数中获取当前横竖屏参数if(newConfig == Configuration.ORIENTATION_PORTRAIT) //竖屏, if(newConfig == Configuration.ORIENTATION_LANDSCAPE)// 横屏,可以分别加载不同的屏幕效果,例如:setContent(R.layout.mainPortrait)||
        或者 setContent(R.layout.landScape),当然如果界面不变情况下,可以直接对控件初始化和数据填充,需要注意,在onConfigurationChanged函数中只能获取到横竖屏切换后的参数,在该函数中获取不到新的Layout和控件的尺寸位置信息,如果要处理尺寸和位置信息,必须要通过消息异步或者延迟调用</string>
        <string name="activityScreenChangeLife2_1"></string>
        <string name="activity_start_model_is_what">任务是用户在执行某项工作时与之交互的一系列活动,这些活动排列在一个堆栈中 - 后台堆栈） - 按每个活动的打开顺序排列,当前活动开始另一个时，新活动被推到堆栈的顶部并且获得焦点。先前的活动保留在堆栈中，但已停止。当活动停止时，系统保留其用户界面的当前状态。
            当用户按下" 后退" 按钮时,当前活动从堆栈顶部弹出（活动被销毁）,并恢复前一活动（恢复其UI的以前状态）.堆栈中的活动不会重新排列,只能从堆栈推送并弹出 - 在当前活动启动时推送到堆栈,并在用户使用Back时离开堆栈时弹出按钮.后堆栈作为"后进先出"对象结构运行.</string>
        <string name="AndroidFragment">Fragment</string>
        <string name="AndroidStorageTechnology">AndroidStorage[存储,strong强壮]Technology[技术]</string>
        <string name="fileIsWhat" >流数据传递，存储就是对文件的存取过程，那么当数据想要保存到文件中，是以文件为中心的‘输入流’，从文件中读取数据，也是以文件为中心的 输出流，这是数据的流向方式划分.\n
        按照处理的单位划分：分为 字节流 和 字符流，字节流读取得都是二进制数，读取到不会做何处理，字符流也是读取二进制数据，但是会把二进制转换成为我们能识别的字符。</string>
        <string name="FileInputStream">输入字节流  InputStream(抽象类) -> FileInputStream (实体类)；缓冲流：BufferedInputStream (输入缓冲实体类：提高输入读取文件效率，内部维护了一个8k的字节数组)
                    \n 输入字符流  Reader -> FileReader   缓冲流： BufferReader</string>
        <string name="FileOutputStream">输出字节流 OutputStream(抽象类) -> FileOutputStream(实体类)； 缓冲流：BufferedOutputStream (输出缓冲实体类：提高输入写入文件效率，内部维护了一个8k的字节数组， write是向内部数组存储，只有flush 或者close 才将字节数组向硬盘输出)\n
                输出字符流 Writer -> FileWriter；缓冲流：BufferWriter </string>
        <string name="InputStreamReader">InputStreamReader（字符转换输入流：字符转字节）\n
                OutputStreamWriter (字符转换输出流：字符转字节)	</string>
        <string name="FileStorageSite">1.context.getCacheDir(); 应用内部存储空间（数据文件私有）文件存储到这个路径下需要注意的是，这个文件的目录和应用的存储位置有关,\n
            当应用被移动到外部存储设备的时候，文件的绝对路径也是变化的，所以建议当数据存储到这个目录的时候，用相对路径。\n
            这个目录和getFilesDir()目录最大的不同在于：当安卓设备的存储空间少，或者不够用的时候，系统会自动删除这个目录下的文件 \n\n

            2.context.getFilesDir();与 getCacheDir一致，系统提供的访问此路径文件的方法是：context.openFileOutput(String,int);context.openFileInput(String name);\n\n

            3.context.getExternalCacheDir();External[外部]，应用外部存储空间，数据文件私有，系统媒体文件无法访问和getCacheDir()还有不同之处：\n
            数据文件私有，系统媒体文件无法访问（例如存了一个MP3文件，通过系统的文件夹管理系统，无法找到。\n
            只有手机系统使用的是虚拟外部存储（虚拟SD卡，现在绝大多数的手机，都不用外挂物理SD卡了）的时候，才可以在卸载应用的同时，\n
            自动删除该目录下的文件，如果是之前的物理存储（物理SD卡）则不会自动删除该目录，及目录下的文件。\n
            在使用的时候，需要判断外部存储的挂载状态（getExternalStorageState(File)），还需要申请读写权限（READ_EXTERNAL_STORAGE， WRITE_EXTERNAL_STORAGE）当其他应用拥有SD卡读写权限的时候，可以访问该目录下的文件\n\n

            4.context.getExternalFilesDir(null);\n\n

            5.Environment.getExternalStorageDirectory();应用外部存储空间（数据文件非私有，可以被手机的系统程序访问，同样，该目录下的文件，所有的APP程序也都是可以访问的，外部存储空间可能处于不可访问状态，或者已经被移除状态，或者存储空间损坏无法访问等问题。\n
            可以通过getExternalStorageState()这个方法来判断外部存储空间的状态。官方建议，不要直接使用该目录，为了避免污染用户的根命名空间，应用私有的数据，应该放在 Context.getExternalFilesDir目录下其他的可以被分享的文件，可以放在getExternalStoragePublicDirectory(String).目录下\n\n

            6.Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_PICTURES); 应用外部存储空间（数据文件非私有，可以被手机的系统程序访问（如MP3格式的文件，会被手机系统检索出来），同样，该目录下的文件，所有的APP程序也都是可以访问的，）\n\n
        </string>
        <string name="AndroidVersionDiff">Android 版本间差异</string>
        <string name="AndroidVersionKitkat" >推出 ART 运行时，但是 Dalvik 还是主角</string>
        <string name="AndroidVserionLOLLIPOP1">Material Design</string>
        <string name="AndroidVserionLOLLIPOP2">性能为中心：Android 在新的 ART 运行时上独占运行，也即是说 ART 正是替代 Dalvik</string>
        <string name="AndroidVserionLOLLIPOP3" >通知：更醒目、更便于访问并且可配置度高</string>
        <string name="AndroidVserionM1">运行时权限 Permission</string>
        <string name="AndroidVserionM2">低电耗模式和应用待机模式</string>
        <string name="AndroidVserionN1">FileProvider</string>
        <string name="androidVersionN2">多屏幕支持(分屏模式)</string>
        <string name="androidVersionN3">Quick Settings 手机通过下拉设置各种状态设置 </string>
        <string name="androidVersionN4">随时随地低电耗模式：仅仅要屏幕关闭了一段时间。且设备未插入电源，低电耗模式就会相应用使用熟悉的 CPU 和网络限制。这意味着用户即使将设备放入口袋里也能够省电。</string>
        <string name="AndroidVersiono1"><![CDATA[后台应用中的输入和数据隐私, 应用程序在后台运行，将不能访问麦克风或摄像头&连续报告的传感器将不再回传数据&使用发送变化时传感器也不会接受事件，如果想要在8.0检测传感器事件。请使用前台服务]]></string>
        <string name="AndroidVersiono2">强制执行 FLAG_ACTIVITY_NEW_TASK 要求，在 Android P 中，您不能从非 Activity 环境中启动 Activity，除非您传递 Intent 标志 FLAG_ACTIVITY_NEW_TASK。 如果您尝试在不传递此标志的情况下启动 Activity，则该 Activity 不会启动，系统会在日志中输出一则消息。注：在 Android N 之前，标志要求一直是期望的行为并被强制执行。 Android N 中的一个错误会临时阻止实施标志要求</string>
    <string name="androidFileProviderIsWhat">是ContentProvider 的一个特殊子类
权限更改：系统权限更改，提高私有文件的安全性，私有目录被限制访问，可防止私有文件的元数据泄漏。在以前版本中，传递数据间使用 file://uri 方式，尝试使用 file://uri 会触发 FileUriExposedException，7.0 之后Google 推荐使用的方式是：FileProvider</string>
    <string name="androidFileProviderUse1">1. 定义一个FileProvider，在ManiFest 里面注册相关信息\n
         
        provider\n
            name="android.support.v4.content.FileProvider"\n
            authorities="com.haopz.haopz70fileprovider.fileprovider"\n
            exported="false"\n
            grantUriPermissions="true"  \n

            meta-data\n
                name="android.support.FILE_PROVIDER_PATHS"\n
                resource="@xml/file_paths"\n
        provider
    </string>
    <string name="androidFileProviderUse2">2. 指定可用文件\n
    FileProvider只能为您事先指定的目录中的文件生成内容URI。要指定目录，请使用元素的子元素在XML中指定其存储区域和路径path。例如，以下paths元素告诉FileProvider您打算为images/私有文件区域的子目录请求内容URI 。\n
    该paths元素必须包含一个或多个以下子元素：\n
    <files-path name = " name " path = " path " />   代表files/应用内部存储区域的子目录中的文件。该子目录Context.getFilesDir()。\n
    <cache-path name =" name " path =" path "/>    代表应用内部存储区的缓存子目录中的文件。此子目录的根路径与返回的值相同getCacheDir()。\n
    <external-path name = " name " path = " path " />   Environment.getExternalStorageDirectory()。\n
    <external-files-path name = " name " path = " path " />  Context#getExternalFilesDir(String) Context.getExternalFilesDir(null)\n
    <external-cache-path name = " name " path = " path " />   代表应用外部缓存区域根目录中的文件。此子目录的根路径与返回的值相同 Context.getExternalCacheDir()。\n
    <external-media-path name = " name " path = " path " />   Context.getExternalMediaDirs()。\n
    
    此目录仅适用于API 21+设备。\n
    
    这些子元素都使用相同的属性：\n
    
    name="name" 是对外查看path 路径的别名，为了强制执行安全性，此值将隐藏您要共享的子目录的名称。该值的子目录名称包含在该 path属性中。\n
    path="path"  你正在分享的子目录。虽然该name属性是一个URI路径段，但该path值是实际的子目录名称。该值是指一个子目录，而不是单个文件或文件。无法通过文件名共享单个文件，也无法使用通配符指定文件的子集。\n
    将 meta-data 元素添加为 provider 定义FileProvider 的元素的子元素。将 meta-data 元素的"android：name"属性设置为 android.support.FILE_PROVIDER_PATHS。将元素的"android：resource"属性设置为@xml/file_paths\n
    </string>
    <string name="androidFileProviderUse3">3. 为文件生成内容URI\n
        要使用内容URI与另一个应用程序共享文件，您的应用程序必须生成内容URI。生成内容URI，创建一个新File的文件，然后传递File 到getUriForFile()。您可以将内容URI返回getUriForFile()到另一个应用程序中 Intent。接收内容URI的客户端应用程序可以通过调用ContentResolver.openFileDescriptor来打开文件并访问其内容 ParcelFileDescriptor。 例如，假设您的应用程序使用具有权限的FileProvider将文件提供给其他应用程序com.mydomain.fileprovider。要default_image.jpg在images/内部存储的子目录中获取文件的内容URI</string>
    <string name="androidFileProviderExample" >file_path 文件里面 files-path name="testname" path="images" \n
        File photoFile = new File(Context.getFileDir() + "/images/" + photoname+".png");\n
        在指定存放地址时候一定要加上对应 Context.getFileDir() + "/images/" + photoname.png，并且在获取到 File 时候，应该先判断 File 是否存在，\n

        以打开照相机为例：\n
        File file1 = new File(getCacheDir()+ "/images/" + "linshi.png");\n
        if (!file1.getParentFile().exists()) {\n
            file1.getParentFile().mkdir();\n
        }\n
        Uri uriForFile = FileProvider.getUriForFile(MainActivity.this, "com.haopz.haopz70fileprovider.fileprovider", file1);\n
        intentShoot.putExtra(MediaStore.EXTRA_OUTPUT, uriForFile);\n
    </string>
</resources>