<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolBar"
        layout="@layout/include_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Android Vserion 4.4"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVersionKitkat"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Android Vserion 5.0"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:id="@+id/MeterialDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_right"
                android:padding="10dp"
                android:text="@string/AndroidVserionLOLLIPOP1"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVserionLOLLIPOP2"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVserionLOLLIPOP3"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Android Vserion 6.0"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:id="@+id/androidPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_right"
                android:padding="10dp"
                android:text="@string/AndroidVserionM1"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVserionM2"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Android Vserion 7.0"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fielProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_right"
                android:padding="10dp"
                android:text="@string/AndroidVserionN1"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/androidVersionN2"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/androidVersionN3"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/androidVersionN4"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Android Vserion 8.0"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVersiono1"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AndroidVersiono2"
                android:visibility="visible" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>