<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/include_toolbar" android:id="@+id/toolBar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="File 是什么"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fileIsWhat"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="File InputStream 文件输入流"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/FileInputStream"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="File OutputStream 文件输出流"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/FileOutputStream"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="File InputStreamReader 转换流"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/InputStreamReader"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a1b2c3"
                android:drawableLeft="@drawable/icon_shugang"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="File 存储位置解析"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/FileStorageSite"
                android:visibility="visible" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>